--- a/src/main.css
+++ b/src/main.css
@@ -6,3 +6,63 @@
     list-style-type: none;
     border: none;
 }
+
+body{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+
+.box{
+    border: solid black 3px;
+    width: 90vw;
+    height: 10vh;
+    border-radius: 15px;
+}
+
+#search-area{
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    display: flex;
+}
+
+#search-bar{
+    border: 2px black solid;
+    width: 15rem;
+    height: 2rem;
+}
+
+#search-button{
+    height: 2rem;
+    padding: 0 1rem;
+    font-weight: bold;
+}
+
+#main-area {
+    height: 50vh;
+    display: flex;
+
+}
+
+#main-area div{
+    border: 1px solid gray;
+    flex: 1;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    gap: 2vw;
+    height: 100%;
+    padding: 1rem;
+}
+
+li {
+    border: solid gray 1px;
+    flex: 1;
+    width: 3rem;
+}
