--- a/src/main.css
+++ b/src/main.css
@@ -7,21 +7,32 @@
     border: none;
 }
 
+:root {
+    --softer-white: rgba(255, 255, 255, 0.87);
+    --soft-white: #f2f2f2;
+    --prof-gray: #1a1a1a;
+}
+
 body{
     display: flex;
     flex-direction: column;
     gap: 1rem;
     align-items: center;
+    background-color: var(--prof-gray);
+    color: var(--soft-white);
 }
 
 .box{
-    border: solid black 3px;
+    border: solid var(--softer-white) 3px;
     width: 90vw;
     height: 10vh;
     border-radius: 15px;
+    max-width: 670px;
 }
 
+/*Top area*/
 #search-area{
+    margin-top: 1rem;
     display: flex;
     justify-content: center;
 }
@@ -31,9 +42,12 @@ form {
 }
 
 #search-bar{
-    border: 2px black solid;
+    border: 2px var(--softer-white) solid;
+    background-color: var(--prof-gray);
     width: 15rem;
     height: 2rem;
+    color: var(--soft-white);
+    padding-left: 0.2rem;
 }
 
 #search-button{
@@ -42,6 +56,9 @@ form {
     font-weight: bold;
 }
 
+
+
+/*Main area*/
 #main-area {
     height: 50vh;
     display: flex;
@@ -50,9 +67,94 @@ form {
 
 #main-area div{
     border: 1px solid gray;
+}
+
+#main-area > div{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+/*Make all degree symbols relative to their temps to center the temp proper*/
+.temp{
+    position: relative;
+}
+
+.degree-symbol{
+    position: absolute;
+}
+
+/*Left*/
+
+#name-holder > h1{
+    margin-left: 0.5rem;
+    font-size: 2rem;
+}
+
+#symbol-holder{
     flex: 1;
 }
 
+/*Center*/
+#main-center{
+    align-items: center;
+}
+
+#temp-holder{
+    margin-top: 20%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#current-temp{
+    font-size: 5rem;
+    text-align: center;
+    position: relative;
+}
+
+#high-low-holder{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    width: 100%;
+}
+
+#high-low-holder > p{
+    width: 20%;
+    border: 0.5px purple solid;
+}
+
+/*Right*/
+#main-right{
+    gap: 0.5rem;
+    align-items: center;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+#main-right > div{
+    width: 95%;
+    border-radius: 15px;
+    flex: 1;
+    display: flex;
+}
+
+#main-right > div > h3 {
+    margin: 0.3rem 0.5rem;
+    font-size: .8rem;
+    flex: 1;
+    text-align: center;
+}
+
+#main-right > div > span{
+    height: 100%;
+    flex: 2;
+}
+
+/*Bottom two areas*/
 ul{
     list-style: none;
     display: flex;
