--- a/src/main.css
+++ b/src/main.css
@@ -94,7 +94,6 @@ form {
 }
 
 /*Left*/
-
 #name-holder > h1{
     margin-left: 0.5rem;
     font-size: 2rem;
@@ -136,8 +135,16 @@ form {
 }
 
 #high-low-holder > p{
-    width: 20%;
-    border: 0.5px purple solid;
+    width: 30%;
+    text-align: center;
+}
+
+#high-low-holder > p > .H-L{
+    font-size: 1.5rem;
+}
+
+#high, #low{
+    font-size: 1rem;
 }
 
 /*Right*/
