--- a/src/main.css
+++ b/src/main.css
@@ -17,7 +17,7 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.75rem;
     align-items: center;
     background: linear-gradient(
         180deg,
@@ -121,11 +121,6 @@ form {
     text-align: center;
 }
 
-#current-temp{
-    padding-right: 0rem;
-    overflow: visible;
-}
-
 #high-low-holder{
     display: flex;
     flex-direction: row;
@@ -133,6 +128,7 @@ form {
     align-items: center;
     height: fit-content;
     width: 100%;
+    gap: 0.6rem;
 }
 
 #high-low-holder > p{
@@ -146,6 +142,10 @@ form {
 
 #high, #low{
     font-size: 1rem;
+}
+
+#high + .degree-symbol, #low + .degree-symbol{
+    top: 5px;
 }
 
 /*Right*/
@@ -162,8 +162,6 @@ form {
   border: solid var(--softer-white) 1px;
   flex: 1;
   display: flex;
-
-  
 }
 
 .bubble{
@@ -209,11 +207,31 @@ ul{
     display: flex;
     gap: 2vw;
     height: 100%;
-    padding: 1rem;
+    padding: 0.5rem 1rem;
+    margin: 0;
 }
 
 li {
     border: solid gray 1px;
     flex: 1;
     width: 3rem;
+}
+
+#hours, #week{
+    height: 15vh;
+}
+
+.hour{
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    text-align: center;
+    height: 100%;
+}
+
+.icon-holder{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    min-height: 0;
 }
