--- a/src/main.css
+++ b/src/main.css
@@ -11,6 +11,7 @@
     --softer-white: rgba(255, 255, 255, 0.87);
     --soft-white: #f2f2f2;
     --prof-gray: #1a1a1a;
+    --rounded-border: 15px;
 }
 
 body{
@@ -31,7 +32,7 @@ body{
     border: solid var(--softer-white) 3px;
     width: 90vw;
     height: 10vh;
-    border-radius: 15px;
+    border-radius: var(--rounded-border);
     max-width: 670px;
 }
 
@@ -156,7 +157,7 @@ form {
 
 #main-right > div {
   width: 95%;
-  border-radius: 15px;
+  border-radius: var(--rounded-border);
   border: solid var(--softer-white) 1px;
   flex: 1;
   display: flex;
@@ -203,14 +204,15 @@ form {
 ul{
     list-style: none;
     display: flex;
-    gap: 2vw;
+    gap: 0.7rem;
     height: 100%;
     padding: 0.5rem 1rem;
     margin: 0;
 }
 
 li {
-    border: solid gray 1px;
+    border: solid var(--softer-white) 1px;
+    border-radius: var(--rounded-border);
     flex: 1;
     width: 3rem;
 }
