--- a/src/main.css
+++ b/src/main.css
@@ -36,6 +36,12 @@ body{
     max-width: 670px;
 }
 
+*:hover{
+    cursor: default;
+}
+
+
+
 /*Top area*/
 #search-area{
     margin-top: 1rem;
@@ -61,6 +67,10 @@ form div{
     padding-left: 0.2rem;
 }
 
+#search-bar:hover{
+    cursor: text;
+}
+
 #search-bar:focus{
     background-color: rgba(0, 0, 0, 0.4);
 }
@@ -69,6 +79,11 @@ form div{
     height: 2rem;
     padding: 0 1rem;
     font-weight: bold;
+}
+
+#search-button:hover{
+    cursor: pointer;
+    background-color: #dddcdc;
 }
 
 #errors{
