--- a/src/main.css
+++ b/src/main.css
@@ -31,7 +31,7 @@ body{
 .box{
     border: solid var(--softer-white) 3px;
     width: 37rem;
-    height: 10vh;
+    height: 4.105rem;
     border-radius: var(--rounded-border);
 }
 
@@ -103,7 +103,7 @@ form div{
 
 /*Main area*/
 #main-area {
-    height: 50vh;
+    height: 20.525rem;
     display: grid;
     grid-template-columns: 1fr auto 2rem 1fr;
     align-items: center;
@@ -243,7 +243,7 @@ li {
 }
 
 #hours, #week{
-    height: 15vh;
+    height: 6.1575rem;
     padding: 0.5rem 1rem;
 }
 
